--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header-1">
         <div class="left-section">
-            <img class="udemy-header-image" src="/udemy/logo-udemy.svg">
+            <img class="udemy-header-image" src="./udemy/logo-udemy.svg">
             <div class="left-content">Categories</div>
         </div>
        
