--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UDEMY </title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image" href="/udemy/logo-udemy.svg">
+    <link rel="icon" type="image" href="udemy/logo-udemy.svg">
 </head>
 <body>
     <div class="header-1">
@@ -25,9 +25,9 @@
             <div class="mid-content">My learning</div>
         </div>
         <div class="right-section">
-            <div class="right-section-image"> <img class="heart" src="/img/hamburger-menu.svg"></div>
-            <div class="right-section-image"> <img class="cart" src="/img/library.svg"></div>
-            <div class="right-section-image"> <img class="notification" src="/img/notifications.svg">
+            <div class="right-section-image"> <img class="heart" src="img/hamburger-menu.svg"></div>
+            <div class="right-section-image"> <img class="cart" src="img/library.svg"></div>
+            <div class="right-section-image"> <img class="notification" src="img/notifications.svg">
                 <div class="notification-count">1</div>
             </div>
             <div class="right-section-image"> <button class="st-button">ST</button></div>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="lady">
-        <img class="lady-image" src="/udemy/lady.jpg">
+        <img class="lady-image" src="udemy/lady.jpg">
         <div class="image-content">
             <div class="first-line">Knowledge for your
                 future self</div>
@@ -71,7 +71,7 @@
 
     <div class="box-2-div">
         <div class="clock-div">
-            <div class="clock"> <img class="clock-image" src="/udemy/clock.png"></div>
+            <div class="clock"> <img class="clock-image" src="udemy/clock.png"></div>
             <div class="content">
                 <div class="schedule-time-div">Schedule time to learn</div>
                 <div class="a-little-div">A little each day adds up. Get
@@ -80,7 +80,7 @@
             </div>
             </div>    
         <div class="solar-div">
-            <div class="solar"> <img class="solar-image" src="/udemy/1275302_09f4.jpg"></div>
+            <div class="solar"> <img class="solar-image" src="udemy/1275302_09f4.jpg"></div>
             <div class="content-2">
                 <div class="fundamental">Fundamentals of Vedic astrology(Begin...</div>
                 <div class="elliptical">10. Ecliptic plane and celestial
@@ -111,10 +111,10 @@
         <div class="footer-2-image">
             <div class="logos"> </div>
             <div class="logos"></div>
-            <div class="logos"><img class="nasdaq" src=" /udemy/Nasdaq-Logo.wine.png"></div>
-            <div class="logos"> <img class="nasdaq" src="/udemy/Volkswagen-logo-2019-1500x1500.png" ></div>
-            <div class="logos"> <img class="nasdaq" src="/udemy/1930961.png"></div>
-            <div class="logos-2"> <img class="amazon" src="/udemy/th.jpeg"></div>
+            <div class="logos"><img class="nasdaq" src="udemy/Nasdaq-Logo.wine.png"></div>
+            <div class="logos"> <img class="nasdaq" src="udemy/Volkswagen-logo-2019-1500x1500.png" ></div>
+            <div class="logos"> <img class="nasdaq" src="udemy/1930961.png"></div>
+            <div class="logos-2"> <img class="amazon" src="udemy/th.jpeg"></div>
          </div>
     </div>
     <div class="footer-3">
@@ -153,7 +153,7 @@
         </div>
     </div>
     <div class="footer-4">
-        <div class="footer-div-3"><img class="y" src="/udemy/udemy-2.png"></div>
+        <div class="footer-div-3"><img class="y" src="udemy/udemy-2.png"></div>
         <div class="footer-div-4"><span class="ui">@ 2023 Udemy, Inc.</span></div>
     </div>
 
